--- a/app/styles/settings/_variables.scss
+++ b/app/styles/settings/_variables.scss
@@ -25,7 +25,7 @@ $font-size--base: 1rem;
 $font-size--large: 1.5rem;
 
 /* Transitions */
-$transition-time--base: .5s;
+$transition-time--base: .25s;
 
 /* Breakpoints */
 $bp-smaller-than-mobile: "max-width: 40rem" !default;
